# python-backend-boilerplate

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  setup.py  skaffold.yaml
.github/ISSUE_TEMPLATE/: custom.md
content/: headsortails.html
skaffold/: app.yaml  foo.yaml
src/: main.py
src/appfoo/: views.py  web.py
src/apphtmltopdf/: views.py  web.py
src/libfoo/: __init__.py
src/libfoo/domain/: __init__.py  foo.py  headsortails.py  jinja.py
src/libfoo/models/: contracts.py  tables.py
src/libhtmltopdf/models/: contracts.py
src/libutil/: __init__.py  engines.py  gcs.py
tests/: conftest.py  test_hc.py  test_headsortails.py  test_views.py
