[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
sqlalchemy = "1.4.41"
pytest = "^7.0.0"
fastapi = "^0.78.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
