[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Maala Mhrez <maala.m.mhrez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
sqlalchemy = "1.4.41"
fastapi = "^0.87.0"
jsql = "^0.8"
moz-sql-parser = "^2.44.19084"
mo-sql-parsing = "^8.146.22081"
boltons = "18.0.1"
httpx = "^0.24.1"
mysqlclient = "^2.2.0"
jinja2 = "^3.1.2"
sentry-sdk = "^1.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
