[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Maala Mhrez <maala.m.mhrez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
fastapi = "^0.87.0"
boltons = "18.0.1"
httpx = "^0.24.1"
jinja2 = "^3.1.2"
sentry-sdk = "^1.28.1"
weasyprint = "^65.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
